[FIX] Try to lower swiper nav bullets to avoid overlap with card

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -110,6 +110,10 @@ header {
     }
   }
 
+  &.swiper-horizontal > .swiper-pagination-bullets{
+    bottom: 0;
+  }
+
   .swiper-pagination-bullet {
     transition: 0.25s ease-in-out;
   }
